remove student/ teacher roles
