# server/_middleware/authorize.js
@@ -4,13 +4,7 @@ const db = require('_helpers/db');
 
 module.exports = authorize;
 
-function authorize(roles = []) {
-    // roles param can be a single role string (e.g. Role.User or 'User') 
-    // or an array of roles (e.g. [Role.Admin, Role.User] or ['Admin', 'User'])
-    if (typeof roles === 'string') {
-        roles = [roles];
-    }
-
+function authorize() {
     return [
         // authenticate JWT token and attach user to request object (req.user)
         jwt({ secret, algorithms: ['HS256'] }),
@@ -19,14 +13,6 @@ function authorize(roles = []) {
         async (req, res, next) => {
             const account = await db.Account.findById(req.user.id);
             const refreshTokens = await db.RefreshToken.find({ account: account.id });
-
-            if (!account || (roles.length && !roles.includes(account.role))) {
-                // account no longer exists or role not authorized
-                return res.status(401).json({ message: 'Unauthorized222' });
-            }
-
-            // authentication and authorization successful
-            req.user.role = account.role;
             req.user.ownsToken = token => !!refreshTokens.find(x => x.token === token);
             next();
         }
