# server/accounts/account.model.js
@@ -8,7 +8,6 @@ const schema = new Schema({
     firstName: { type: String, required: true },
     lastName: { type: String, required: true },
     acceptTerms: Boolean,
-    role: { type: String, required: true },
     score: {type: Number, unique: false},
     scoreDescription: {type: Array, unique: false},
     rules: {type: Array, unique: false},
