# server/swagger.yaml
@@ -227,9 +227,6 @@ paths:
                   email:
                     type: string
                     example: "jason@example.com"
-                  role:
-                    type: string
-                    example: "Admin"
                   created:
                     type: string
                     example: "2020-05-05T09:12:57.848Z"
@@ -290,9 +287,6 @@ paths:
                   email:
                     type: string
                     example: "jason@example.com"
-                  role:
-                    type: string
-                    example: "Admin"
                   created:
                     type: string
                     example: "2020-05-05T09:12:57.848Z"
@@ -522,9 +516,6 @@ paths:
                     email:
                       type: string
                       example: "jason@example.com"
-                    role:
-                      type: string
-                      example: "Admin"
                     created:
                       type: string
                       example: "2020-05-05T09:12:57.848Z"
@@ -564,9 +555,6 @@ paths:
                 confirmPassword:
                   type: string
                   example: "pass123"
-                role:
-                  type: string
-                  enum: [Admin, User]
               required:
                 - title
                 - firstName
@@ -574,7 +562,6 @@ paths:
                 - email
                 - password
                 - confirmPassword
-                - role
       responses:
         "200":
           description: Account created successfully, verification is not required for accounts created with this endpoint. The details of the new account are returned.
@@ -598,9 +585,6 @@ paths:
                   email:
                     type: string
                     example: "jason@example.com"
-                  role:
-                    type: string
-                    example: "Admin"
                   created:
                     type: string
                     example: "2020-05-05T09:12:57.848Z"
@@ -654,9 +638,6 @@ paths:
                   email:
                     type: string
                     example: "jason@example.com"
-                  role:
-                    type: string
-                    example: "Admin"
                   created:
                     type: string
                     example: "2020-05-05T09:12:57.848Z"
@@ -698,9 +679,6 @@ paths:
                 confirmPassword:
                   type: string
                   example: "pass123"
-                role:
-                  type: string
-                  enum: [Admin, User]
       responses:
         "200":
           description: Account updated successfully. The details of the updated account are returned.
@@ -724,9 +702,6 @@ paths:
                   email:
                     type: string
                     example: "jason@example.com"
-                  role:
-                    type: string
-                    example: "Admin"
                   created:
                     type: string
                     example: "2020-05-05T09:12:57.848Z"
